fix security vulnerabilities

--- a/typescript/package.json
+++ b/typescript/package.json
@@ -32,5 +32,9 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "resolutions": {
+    "**/**/minimist": "^1.2.2",
+    "**/**/acorn": "^7.1.1"
   }
 }
