--- a/ios-frameworks/package.json
+++ b/ios-frameworks/package.json
@@ -13,5 +13,8 @@
     "react-native-ffmpeg": "0.4.0",
     "react-native-gesture-handler": "^1.4.1",
     "react-navigation": "^3.11.1"
+  },
+  "resolutions": {
+    "**/**/minimist": "^1.2.2"
   }
 }
